Dual Java Install for Windows
Fixes Theads with state blocked on Java 8.
https://github.com/yacy/yacy_search_server/issues/502

But a warning with java 11.
I had to remove the all performance tuning. Please feel free to find out the cause.